[gd_scene load_steps=15 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" uid="uid://d1wt4ma6055l8" path="res://scripts/balloon.gd" id="1_u045a"]
[ext_resource type="FontFile" uid="uid://d1lpqmuqhlmhx" path="res://assets/font/SourceHanSansCN-Medium.ttf" id="2_m0o5a"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="3_i80d5"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="4_hsek3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsek3"]
bg_color = Color(0.44, 0.44, 0.44, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i80d5"]
bg_color = Color(0.28, 0.28, 0.28, 0.921569)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvj2v"]
bg_color = Color(1, 1, 1, 0.921569)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u045a"]
bg_color = Color(0.11, 0.11, 0.11, 0.921569)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8copa"]
bg_color = Color(0, 0, 0, 0.921569)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0o5a"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/fonts/font = ExtResource("2_m0o5a")
Button/styles/disabled = SubResource("StyleBoxFlat_hsek3")
Button/styles/focus = SubResource("StyleBoxFlat_i80d5")
Button/styles/hover = SubResource("StyleBoxFlat_kvj2v")
Button/styles/normal = SubResource("StyleBoxFlat_u045a")
Button/styles/pressed = SubResource("StyleBoxFlat_8copa")
MarginContainer/constants/margin_bottom = 30
MarginContainer/constants/margin_left = 60
MarginContainer/constants/margin_right = 60
MarginContainer/constants/margin_top = 15
PanelContainer/styles/panel = SubResource("StyleBoxFlat_m0o5a")
RichTextLabel/fonts/normal_font = ExtResource("2_m0o5a")

[sub_resource type="Animation" id="Animation_m0o5a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u045a"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m0o5a"]
_data = {
&"RESET": SubResource("Animation_m0o5a"),
&"hide": SubResource("Animation_u045a")
}

[node name="Balloon" type="CanvasLayer"]
process_mode = 3
layer = 127
script = ExtResource("1_u045a")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_qq3yp")

[node name="Background" type="TextureRect" parent="Balloon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="Portrait" type="TextureRect" parent="Balloon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -652.0
offset_top = 39.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.5
offset_top = -35.0
offset_right = 290.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("4_hsek3")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/ResponsesMenu"]
layout_mode = 2
text = "Response example"

[node name="PanelContainer" type="PanelContainer" parent="Balloon"]
clip_children = 2
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -190.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Balloon/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_i80d5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue..."
pause_at_characters = "。？！"
seconds_per_pause_step = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_m0o5a")
}

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
